--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css" />
    <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js"></script>
    <script src='https://npmcdn.com/@turf/turf/turf.min.js'></script>
+   <script src="https://unpkg.com/tangram/dist/tangram.min.js"></script>
 
    
    <style>
