--- a/index.html
+++ b/index.html
@@ -4,80 +4,36 @@
    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css" />
    <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js"></script>
    <script src='https://npmcdn.com/@turf/turf/turf.min.js'></script>
-
+   <link href="https://fonts.googleapis.com/css?family=Spectral:400,500,600&display=swap" rel="stylesheet">
    
-   <style>
-      body, html { border: 0; padding: 0; margin: 0; font-family: sans-serif}
-      #map { width: 100vw; height: 100vh; }
-      #sidebar {
-         width: 250px;
-         background: white;
-         z-index: 500000;
-         position: absolute;
-         margin: 15px;
-         padding: 15px;
-      }
-      p {
-         font-size: 14px;
-         color: grey;
-      }
-
-      .filters {
-         height: 200px;
-         overflow-y: scroll;
-      }
-
-      .emphasis {
-         color: black;
-         font-weight: bold;
-      }
-
-      .custom .leaflet-popup-tip {
-         display: none;
-      }
-      .custom .leaflet-popup-content-wrapper {
-         background: #fff;
-         border: 1.5px solid #D3D6D8;
-         padding: 20px;
-         color: black;
-         padding: 0;
-         border-radius: 0;
-         box-shadow: none;
-         font-family: sans-serif;
-         font-size: 14px;
-      }
-
-      .key {
-         display: inline-block;
-         width: 80px;
-      }
-
-      #clear {
-         display: none;
-      }
-
-      .square {
-         height: 12px;
-         width: 12px;
-         display: inline-block;
-      }
-   </style>
+   <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
+   <div id="search-container">
+      <input class="text-field" id="address" type="text" value="" placeholder="Search for an address...">
+      <div class="autocomplete-items">
+      </div>
+   </div>
+   <div id="loading-container">
+      <img src="loading.svg">
+   </div>
    <div id="sidebar">
-      <h3>Enter an address</h3>
-      <input id="address" type="text" value="150 N Orange Ave, Orlando, FL"><button id="go">Search</button><button id="clear">Clear</button>
-      <h3>Distance</h3>
+      <h1>Minutes Matter</h1>
+      <p>An analysis of 195 fire stations in the greater Orlando area shows the expected response times of local fire departments.</p>
+      <h2>Range</h2>
       <p>Configure a range in distance from each fire station.</p>
       <input type="range" id="range" min="0" value="2350" max="8000"><span id="range-text"></span>
-      <h3>Jurisdictions</h3>
+      <h2>Department Jurisdictions</h2>
       <p>Explore a single or multiple jurisdictions</p>
-      <div class="filters"></div>
+      <div class="filter-container">
+         <div class="filters">Hello</div>
+         <div class="filter-items"></div>
+      </div>
       <p id="num"></p>
-      <h3>Key</h3>
+      <h2>Key</h2>
       <div class="sidebar-key"></div>
    </div>
    <div id="map"></div>
-   <script src="index.js"></script>
+   <script type="module" src="index.js"></script>
 </body>
 </html>
