--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
       <p>An analysis of 195 fire stations in the greater Orlando area shows the expected response times of local fire departments.</p>
       <h2>Range</h2>
       <p>Configure a range in distance from each fire station.</p>
-      <input type="range" id="range" min="0" value="2350" max="8000"><span id="range-text"></span>
+      <div class="slider-container">
+         <input class="range" type="range" id="range" min="0" value="2350" max="8000">
+         <div id="range-text"></div>
+      </div>
+      
       <h2>Department Jurisdictions</h2>
       <p>Explore a single or multiple jurisdictions</p>
       <div class="filter-container">
