--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
          <div class="filter-items"></div>
       </div>
       <p id="num"></p>
-      <h2>Key</h2>
+      <h2>Legend</h2>
       <div class="sidebar-key"></div>
    </div>
    <div id="map"></div>
