--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 </head>
 <body>
    <div id="search-container">
-      <input class="text-field" id="address" type="text" value="" placeholder="Search for an address...">
+      <div id="search-field-container">
+         <img src="search.svg">
+         <input class="text-field" id="address" type="text" value="" placeholder="Search for an address...">
+      </div>
+      
       <div class="autocomplete-items">
       </div>
    </div>
@@ -23,14 +27,31 @@
       <h2>Range</h2>
       <p>Configure a range in distance from each fire station.</p>
       <div class="slider-container">
-         <input class="range" type="range" id="range" min="0" value="2350" max="8000">
+         <input class="range" type="range" id="range" min="0" value="300" max="600">
          <div id="range-text"></div>
+      </div>
+      <h2>Range Type</h2>
+      <p>Choose between distance (miles) or time (minutes) as a range type.</p>
+      <div class="">
+         <label class="radio-container">
+            <input class="range-type" type="radio" id="time" name="mode" checked>
+            <span class="checkmark"></span>
+            Time
+         </label>
+         <label class="radio-container">
+            <input class="range-type" type="radio" id="distance" name="mode">
+            <span class="checkmark"></span>
+            Distance
+         </label>
       </div>
       
       <h2>Department Jurisdictions</h2>
       <p>Explore a single or multiple jurisdictions</p>
       <div class="filter-container">
-         <div class="filters">Hello</div>
+         <div class="filters">
+            <div class="filter-text"></div>
+            <img src="down.svg">
+         </div>
          <div class="filter-items"></div>
       </div>
       <p id="num"></p>
