--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js"></script>
    <script src='https://npmcdn.com/@turf/turf/turf.min.js'></script>
    <link href="https://fonts.googleapis.com/css?family=Spectral:400,500,600&display=swap" rel="stylesheet">
-   
+   <script src="https://unpkg.com/tangram/dist/tangram.min.js"></script>
    <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
