--- a/index.html
+++ b/index.html
@@ -52,7 +52,14 @@
             <div class="filter-text"></div>
             <img src="down.svg">
          </div>
-         <div class="filter-items"></div>
+         <div class="filter-items">
+            <div class="filter-item select-text" id="select-all">
+               Select all
+            </div>
+            <div class="filter-item select-text" id="select-none">
+               Select none
+            </div>
+         </div>
       </div>
       <p id="num"></p>
       <h2>Legend</h2>
