--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
    <div id="search-container">
       <div id="search-field-container">
-         <img src="search.svg">
+         <img src="resources/search.svg">
          <input class="text-field" id="address" type="text" value="" placeholder="Search for an address...">
       </div>
       
@@ -19,7 +19,7 @@
       </div>
    </div>
    <div id="loading-container">
-      <img src="loading.svg">
+      <img src="resources/loading.svg">
    </div>
    <div id="sidebar">
       <h1>Minutes Matter</h1>
@@ -50,7 +50,7 @@
       <div class="filter-container">
          <div class="filters">
             <div class="filter-text"></div>
-            <img src="down.svg">
+            <img src="resources/down.svg">
          </div>
          <div class="filter-items">
             <div class="filter-item select-text" id="select-all">
