--- a/index.html
+++ b/index.html
@@ -1,20 +1,18 @@
 <html>
+
 <head>
    <title>Fire Stations</title>
    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css" />
-   <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js"></script>
-   <script src='https://npmcdn.com/@turf/turf/turf.min.js'></script>
-   <link href="https://fonts.googleapis.com/css?family=Spectral:400,500,600&display=swap" rel="stylesheet">
-   <script src="https://unpkg.com/tangram/dist/tangram.min.js"></script>
-   <link rel="stylesheet" type="text/css" href="index.css">
+   <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
+
 <body>
    <div id="search-container">
       <div id="search-field-container">
          <img src="resources/search.svg">
          <input class="text-field" id="address" type="text" value="" placeholder="Search for an address...">
       </div>
-      
+
       <div class="autocomplete-items">
       </div>
    </div>
@@ -23,7 +21,8 @@
    </div>
    <div id="sidebar">
       <h1>Minutes Matter</h1>
-      <p>An analysis of 195 fire stations in the greater Orlando area shows the expected response times of local fire departments.</p>
+      <p>An analysis of 195 fire stations in the greater Orlando area shows the expected response times of local fire
+         departments.</p>
       <h2>Range</h2>
       <p>Configure a range in distance from each fire station.</p>
       <div class="slider-container">
@@ -44,7 +43,7 @@
             Distance
          </label>
       </div>
-      
+
       <h2>Department Jurisdictions</h2>
       <p>Explore a single or multiple jurisdictions</p>
       <div class="filter-container">
@@ -66,6 +65,12 @@
       <div class="sidebar-key"></div>
    </div>
    <div id="map"></div>
-   <script type="module" src="index.js"></script>
+
+   <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js"></script>
+   <script src='https://npmcdn.com/@turf/turf/turf.min.js'></script>
+   <link href="https://fonts.googleapis.com/css?family=Spectral:400,500,600&display=swap" rel="stylesheet">
+   <script src="https://unpkg.com/tangram/dist/tangram.min.js"></script>
+   <script type="module" src="js/app.js"></script>
 </body>
+
 </html>
