--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
          <div id="range-text"></div>
       </div>
       <h2>Range Type</h2>
-      <p>Choose between distance (miles) or time (minutes) as a range type.</p>
+      <p>Choose between distance or time as a range type.</p>
       <div class="">
          <label class="radio-container">
             <input class="range-type" type="radio" id="time" name="mode" checked>
             <span class="checkmark"></span>
-            Time
+            Time (minutes)
          </label>
          <label class="radio-container">
             <input class="range-type" type="radio" id="distance" name="mode">
             <span class="checkmark"></span>
-            Distance
+            Distance (miles)
          </label>
       </div>
       
