--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
    <title>Fire Stations</title>
    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css" />
    <link rel="stylesheet" type="text/css" href="css/index.css">
+   <link rel="stylesheet" type="text/css" href="css/sidebar.css">
+   <link rel="stylesheet" type="text/css" href="css/search.css">
+   <link rel="stylesheet" type="text/css" href="css/tooltip.css">
 </head>
 
 <body>
