--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
    <link rel="stylesheet" type="text/css" href="css/sidebar.css">
    <link rel="stylesheet" type="text/css" href="css/search.css">
    <link rel="stylesheet" type="text/css" href="css/tooltip.css">
+   <script src='https://npmcdn.com/@turf/turf/turf.min.js'></script>
+
 </head>
 
 <body>
