--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
       <h1>Minutes Matter</h1>
       <p>An analysis of 195 fire stations in the greater Orlando area shows the expected response times of local fire
          departments.</p>
-      <button id="expand-button">Expand Sidebar</button>
+      <button id="expand-button">Expand Menu</button>
+      <button id="hide-button">Hide Menu</button>
       <div class="sidebar-content">
          <h2>Range</h2>
          <p>Configure a range in distance from each fire station.</p>
@@ -39,7 +40,7 @@
          </div>
          <h2>Range Type</h2>
          <p>Choose between distance or time as a range type.</p>
-         <div class="">
+         <div class="radio-row">
             <label class="radio-container">
                <input class="range-type" type="radio" id="time" name="mode" checked>
                <span class="checkmark"></span>
@@ -69,11 +70,9 @@
             </div>
          </div>
          <p id="num"></p>
-         <h2>Legend</h2>
+         <h2 class="legend-text">Legend</h2>
          <div class="sidebar-key"></div>
       </div>
-
-      <button id="hide-button">Hide Sidebar</button>
    </div>
    <div id="map"></div>
 
